--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>usb_cam</name>
-  <version>0.8.1</version>
-  <description>A ROS Driver for V4L USB Cameras</description>
+  <name>ips_cam</name>
+  <version>0.1.0</version>
+  <description>ROS Indoor Positioning System camera package for V4L USB Cameras</description>
 
-  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>
+  <maintainer email="stuart.g.johnson@gmail.com">Stuart Johnson</maintainer>
 
   <license>BSD</license>
 
