Working version. Extensive tests/development and some refactoring to transfer from usb_cam -> ips_cam. New ips_cam namespace. Probably should also update the usb_cam and sub-namespaces to make them unique from the original usb_cam package. Note this package still needs a bit of work: - c++ unit tests work ok but the "Cmake" tests are still pretty wonky. - the locations of config files for some tests need to be refined. - consistent integration with the overarching ros2_ws and project repository needs to be worked out. - automated test a la the usb_cam author (via github actions) should be made to work and ... turned back on in github - presumably. - for the camera(s) I am using, the v4l2 parameters used from the usb_cam repo are incorrect. These should be updated for my (logitech) cameras.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,14 @@
 .project
 .settings
 **__pycache__
-
+.catkin_workspace
+build/
+devel/
+install/
+log/
+recordings/
+output_videos/
+output_data/
 
 # documentation
 docs/xml
