--- a/package.xml
+++ b/package.xml
@@ -30,11 +30,15 @@
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>camera_info_manager</depend>
   <depend>builtin_interfaces</depend>
   <depend>image_transport</depend>
   <depend>image_transport_plugins</depend>
   <depend>v4l-utils</depend>
+  <depend>tf2</depend>
+  <depend>yaml-cpp</depend>
 
   <!-- Only required for MJPEG to RGB converison -->
   <depend>ffmpeg</depend>
