--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
 
   <maintainer email="stuart.g.johnson@gmail.com">Stuart Johnson</maintainer>
 
-  <license>BSD</license>
+  <license>BSD-3-Clause</license>
 
   <url type="website">http://wiki.ros.org/usb_cam</url>
   <url type="bugtracker">https://github.com/ros-drivers/usb_cam/issues</url>
