github actions: try adding ssh keys and secrets.

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -82,6 +82,7 @@ jobs:
         with:
           path: ros_ws/src
           token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.ACTIONS_SSH_KEY }}
       - name: Build and Test ROS 1
         uses: ros-tooling/action-ros-ci@master
         if: ${{ contains('["melodic", "noetic"]', matrix.ros_distro) }}
